# gmail-yaml-filters

./: .gitignore  README.md  pyproject.toml
gmail_yaml_filters/: constants.py  main.py  upload.py
